add movie sig wei

--- a/lib/significance weighting.Rmd
+++ b/lib/significance weighting.Rmd
@@ -13,12 +13,27 @@ webtrain_a = read.csv("../output/webtrain_a.csv", header = FALSE)
 webtrain_a = unlist(webtrain_a)
 sqrt(length(webtrain_a)) # = 4151
 ```
+### This is for movie data
+```{r}
+movietrain_a = read.csv("../output/movie_train_a.csv", header = FALSE)
+movietrain_a = unlist(movietrain_a)
+movie_train_a = matrix(0, 5055,5055)
+movie_train_a[upper.tri(movie_train_a, diag=FALSE)] = unlist(movietrain_a)
+movie_train_a = t(movie_train_a)
+movie_train_a[upper.tri(movie_train_a, diag=FALSE)] = unlist(movietrain_a)
+# diagonal is 0
+```
+### Note: the values in the webtrain_a and in movietrain_a are number of co-reated items pairwise.
 ##### choose the number of co-rated items
 ```{r}
 print(mean(webtrain_a))
 print(sd(webtrain_a))
+print(mean(movie_train_a))
+print(sd(movie_train_a))
 ```
+## Web dataset
 ### It is reasonable that we choose 5, 8, 9 and 10 as the number of co-rated items.
+### n = 5
 ```{r}
 webtrain_a_n_5 = webtrain_a
 n = 5
@@ -33,9 +48,10 @@ for (i in 1:length(webtrain_a)){
 
 webtrain_a_matrix_5 = as.numeric(webtrain_a_n_5)
 webtrain_a_matrix_5 = matrix(webtrain_a_matrix_5, nrow = 4151, ncol = 4151)
+diag(webtrain_a_matrix_5) = 0
 save(webtrain_a_matrix_5,file = "../output/webtrain_significance_weighting_n=5.Rdata")
 ```
-###n=8
+### n=8
 ```{r}
 webtrain_a_n_8 = webtrain_a
 n = 8
@@ -50,9 +66,10 @@ for (i in 1:length(webtrain_a)){
 
 webtrain_a_matrix_8 = as.numeric(webtrain_a_n_8)
 webtrain_a_matrix_8 = matrix(webtrain_a_matrix_8, nrow = 4151, ncol = 4151)
+diag(webtrain_a_matrix_8) = 0
 save(webtrain_a_matrix_8,file = "../output/webtrain_significance_weighting_n=8.Rdata")
 ```
-###n=9
+### n=9
 ```{r}
 webtrain_a_n_9 = webtrain_a
 n = 9
@@ -67,9 +84,10 @@ for (i in 1:length(webtrain_a)){
 
 webtrain_a_matrix_9 = as.numeric(webtrain_a_n_9)
 webtrain_a_matrix_9 = matrix(webtrain_a_matrix_9, nrow = 4151, ncol = 4151)
+diag(webtrain_a_matrix_9) = 0
 save(webtrain_a_matrix_9,file = "../output/webtrain_significance_weighting_n=9.Rdata")
 ```
-###n=10
+### n=10
 ```{r}
 webtrain_a_n_10 = webtrain_a
 n = 10
@@ -84,12 +102,128 @@ for (i in 1:length(webtrain_a)){
 
 webtrain_a_matrix_10 = as.numeric(webtrain_a_n_10)
 webtrain_a_matrix_10 = matrix(webtrain_a_matrix_10, nrow = 4151, ncol = 4151)
+diag(webtrain_a_matrix_10) = 0
 save(webtrain_a_matrix_10,file = "../output/webtrain_significance_weighting_n=10.Rdata")
 ```
-## The values that are not 1
+## The propotions of values that are not 1
 ```{r}
-a1 = i - sum(webtrain_a_n_5 == 1)
-a2 = i - sum(webtrain_a_n_8 == 1)
-a3 = i - sum(webtrain_a_n_9 == 1)
-a4 = i - sum(webtrain_a_n_10 == 1)
+i=17230801
+a1 = (i - sum(webtrain_a_n_5 == 1))/i
+a2 = (i - sum(webtrain_a_n_8 == 1))/i
+a3 = (i - sum(webtrain_a_n_9 == 1))/i
+a4 = (i - sum(webtrain_a_n_10 == 1))/i
+```
+## Movie dataset
+### We choose 9, 10, 11 and 12 as the number of co-rated items
+### n = 9
+```{r}
+movie_train_a_9 = movie_train_a
+n = 9
+for(x in 1:dim(movie_train_a)[1]){
+  for(y in 1:dim(movie_train_a)[1]){
+    if(movie_train_a_9[x,y] >= n){
+      movie_train_a_9[x,y] = 1
+    }
+    else{
+      movie_train_a_9[x,y] = movie_train_a_9[x,y]/n
+    }
+  }
+}
+
+save(movie_train_a_9,file = "../output/movietrain_significance_weighting_n=9.Rdata")
+```
+### n = 10
+```{r}
+movie_train_a_10 = movie_train_a
+n = 10
+for(x in 1:dim(movie_train_a)[1]){
+  for(y in 1:dim(movie_train_a)[1]){
+    if(movie_train_a_10[x,y] >= n){
+      movie_train_a_10[x,y] = 1
+    }
+    else{
+      movie_train_a_10[x,y] = movie_train_a_10[x,y]/n
+    }
+  }
+}
+
+save(movie_train_a_10,file = "../output/movietrain_significance_weighting_n=10.Rdata")
+```
+### n = 11
+```{r}
+movie_train_a_11 = movie_train_a
+n = 11
+for(x in 1:dim(movie_train_a)[1]){
+  for(y in 1:dim(movie_train_a)[1]){
+    if(movie_train_a_11[x,y] >= n){
+      movie_train_a_11[x,y] = 1
+    }
+    else{
+      movie_train_a_11[x,y] = movie_train_a_11[x,y]/n
+    }
+  }
+}
+
+save(movie_train_a_11,file = "../output/movietrain_significance_weighting_n=11.Rdata")
+```
+### n = 12
+```{r}
+movie_train_a_12 = movie_train_a
+n = 12
+for(x in 1:dim(movie_train_a)[1]){
+  for(y in 1:dim(movie_train_a)[1]){
+    if(movie_train_a_12[x,y] >= n){
+      movie_train_a_12[x,y] = 1
+    }
+    else{
+      movie_train_a_12[x,y] = movie_train_a_12[x,y]/n
+    }
+  }
+}
+
+save(movie_train_a_12,file = "../output/movietrain_significance_weighting_n=12.Rdata")
+```
+### n = 14
+```{r}
+movie_train_a_14 = movie_train_a
+n = 14
+for(x in 1:dim(movie_train_a)[1]){
+  for(y in 1:dim(movie_train_a)[1]){
+    if(movie_train_a_14[x,y] >= n){
+      movie_train_a_14[x,y] = 1
+    }
+    else{
+      movie_train_a_14[x,y] = movie_train_a_14[x,y]/n
+    }
+  }
+}
+
+save(movie_train_a_14,file = "../output/movietrain_significance_weighting_n=14.Rdata")
+```
+### n = 16
+```{r}
+movie_train_a_16 = movie_train_a
+n = 16
+for(x in 1:dim(movie_train_a)[1]){
+  for(y in 1:dim(movie_train_a)[1]){
+    if(movie_train_a_16[x,y] >= n){
+      movie_train_a_16[x,y] = 1
+    }
+    else{
+      movie_train_a_16[x,y] = movie_train_a_16[x,y]/n
+    }
+  }
+}
+
+save(movie_train_a_16,file = "../output/movietrain_significance_weighting_n=16.Rdata")
+```
+## The propotions of values that are not 1
+```{r}
+i=25553025
+a1 = (i - sum(movie_train_a_9 == 1))/i
+a2 = (i - sum(movie_train_a_10 == 1))/i
+a3 = (i - sum(movie_train_a_11 == 1))/i
+a4 = (i - sum(movie_train_a_12 == 1))/i
+a5 = (i - sum(movie_train_a_14 == 1))/i
+a6 = (i - sum(movie_train_a_16 == 1))/i
 ```
