--- a/lib/significance weighting.ipynb
+++ b/lib/significance weighting.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -59,64 +59,27 @@
    ],
    "source": [
     "m = webtrain.shape[0]\n",
+    "a = []\n",
     "print(m)"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-=======
    "execution_count": 20,
->>>>>>> e40b7841e08b3018bad25a426a54a024ca722fce
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "a = []\n",
-    "##### webtrain####\n",
+    "##### webtrain\n",
     "for x in range(0, m):\n",
     "    for y in range(0,m):\n",
     "        a.append(pd.Series.count(list(set(webtrain.iloc[x]).intersection(set(webtrain.iloc[y])))))"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "for x in range(0, m):\n",
-    "    for y in range(0,m):\n",
-    "        print(x,y)"
-   ]
-  },
-  {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 48,
-=======
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "17230801"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
->>>>>>> e40b7841e08b3018bad25a426a54a024ca722fce
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -127,135 +90,44 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5055\n"
-     ]
-    }
-   ],
-   "source": [
-    "m1 = movietrain.shape[0]\n",
-    "print(m1)"
-=======
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "m1 = movietrain.shape[0]\n",
-    "n1 = movietrain.shape[1]\n",
-    "a1 = []"
->>>>>>> e40b7841e08b3018bad25a426a54a024ca722fce
+    "n1 = movietrain.shape[1]\n"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 51,
-=======
    "execution_count": null,
->>>>>>> e40b7841e08b3018bad25a426a54a024ca722fce
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-<<<<<<< HEAD
+    "### movie\n",
     "a1 = []\n",
     "for x in range(0,m1):\n",
     "    for y in range(0,x):\n",
-=======
-    "for x in range(0,m1):\n",
-    "    for y in range(0,m1):\n",
->>>>>>> e40b7841e08b3018bad25a426a54a024ca722fce
     "        a1.append(sum(movietrain_numpyarray[x,] == movietrain_numpyarray[y,]))\n",
-    "    print(x)"
+    "        print(x,y)"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 52,
-=======
    "execution_count": 117,
->>>>>>> e40b7841e08b3018bad25a426a54a024ca722fce
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-<<<<<<< HEAD
    "source": [
     "outfile1 = open('../output/movie_train_a.csv','w')\n",
     "out = csv.writer(outfile1)\n",
     "out.writerows(map(lambda x: [x], a1))\n",
     "outfile1.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12773985"
-      ]
-     },
-     "execution_count": 53,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(a1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "12773985.0"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-=======
->>>>>>> e40b7841e08b3018bad25a426a54a024ca722fce
-   "source": [
-    "(5055*5055-5055)/2"
    ]
   },
   {
@@ -271,35 +143,6 @@
     "out.writerows(map(lambda x: [x], a))\n",
     "outfile.close()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5055"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "m1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
