--- a/lib/combined selecting neibors.Rmd
+++ b/lib/combined selecting neibors.Rmd
@@ -3,8 +3,8 @@ title: "Combined+selecting+neighborhoods"
 author: "Sijian Xuan"
 date: "November 23, 2017"
 output:
-  pdf_document: default
   html_document: default
+  pdf_document: default
 ---
 ###Read data and set weight, threshold
 ```{r}
@@ -12,19 +12,39 @@ load("../output/web.sp.sim.Rdata")
 load("../output/web.entropy.sim.Rdata")
 load("../output/web.msd.sim.Rdata")
 data1 = web.sp.sim
+diag(data1) = 0
 data2 = web.entropy.sim
+diag(data2) = 0
 data3 = web.msd.sim
-
-threshold = 50
-n = 6
+diag(data3) = 0
+# dimension of 3 dataset are all 4151 dimension square matrices.
 ```
-### Standard: larger than threshold and max n is 5.
-```{r,warning=FALSE}
-aaa<- function(x){
+```{r}
+hist(data1,30)
+hist(data2,30)
+hist(data3,30)
+```
+```{r}
+threshold1 = 0.8
+threshold2 = 10
+threshold3 = 0.3
+n = 20 
+```
+### Standard: larger than threshold and max number of estimator is n.
+```{r}
+aaa<- function(x,threshold){
   a1<- x[order(-x)][1:n]*(x[order(-x)][1:n]>=threshold)
   a1[a1==0]<- NA
   res<- which(x %in% a1)[1:n]
   return(res)
 }
-t(apply(data, 1, function(x) aaa(x)))
+result = t(apply(data1, 1, function(x) aaa(x,threshold1)))
+value_matrix = as.numeric(matrix(0,dim(result)[1],dim(result)[2]))
+for(x in 1:4151){
+  for(y in 1:n){
+    if(value_matrix[x,y] != NA){
+      value_matrix[x,y] = 
+    }
+  }
+}
 ```
